# Agentic_RAG_QA_System

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: build_index.py  run_local_chat.py
src/agent/: graph.py  prompts.py  state.py  tools.py
src/api/: app.py
src/config/: settings.py
src/eval/: metrics.py
src/llm/: deepseek_client.py
src/retrieval/: chroma_store.py  embeddings.py  rerank.py
tests/: test_metrics.py
train/data/: sample_eval.jsonl
train/rl/: train_grpo.py
train/sft/: build_sft_data.py  train_sft.py
